// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stake Snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-89297o-0 AnwdG"
    >
      <div
        class="sc-1d8aayd-1 aOjqd"
        style="opacity: 1;"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button sc-1d8aayd-0 KuyHK"
        >
          <span
            class="ant-input-wrapper ant-input-group"
          >
            <span
              class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
            >
              <input
                class="ant-input ant-input-lg"
                id="stake"
                type="number"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="sc-1ttu0x8-0 ksCpld"
                >
                  DEV
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
                type="button"
              >
                <span>
                  Stake
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        style="height: 40px;"
      />
      <div
        class="ant-card ant-card-bordered ant-card-small sc-1fcc07h-0 haBOqc"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Gas Fee (this is prediction value)
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <p>
            0.003345
             ETH
          </p>
        </div>
      </div>
      <div
        class="ant-card ant-card-bordered ant-card-small sc-1fcc07h-0 haBOqc"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Gas Fee (this is prediction value)
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <p>
            0.003345
             ETH
            <span
              class="sc-1nbnut-0 kCUpAq"
            >
               $0.78
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Stake Snapshot with title 1`] = `
<body>
  <div>
    <div
      class="sc-89297o-0 AnwdG"
    >
      <label
        for="stake"
      >
        Stake
      </label>
      <div
        class="sc-1d8aayd-1 aOjqd"
        style="opacity: 1;"
      >
        <span
          class="ant-input-group-wrapper ant-input-group-wrapper-lg ant-input-search ant-input-search-large ant-input-search-with-button sc-1d8aayd-0 KuyHK"
        >
          <span
            class="ant-input-wrapper ant-input-group"
          >
            <span
              class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
            >
              <input
                class="ant-input ant-input-lg"
                id="stake"
                type="number"
                value=""
              />
              <span
                class="ant-input-suffix"
              >
                <button
                  class="sc-1ttu0x8-0 ksCpld"
                >
                  DEV
                </button>
              </span>
            </span>
            <span
              class="ant-input-group-addon"
            >
              <button
                class="ant-btn ant-btn-primary ant-btn-lg ant-input-search-button"
                type="button"
              >
                <span>
                  Stake
                </span>
              </button>
            </span>
          </span>
        </span>
      </div>
      <div
        style="height: 40px;"
      />
      <div
        class="ant-card ant-card-bordered ant-card-small sc-1fcc07h-0 haBOqc"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Gas Fee (this is prediction value)
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <p>
            0.003345
             ETH
          </p>
        </div>
      </div>
      <div
        class="ant-card ant-card-bordered ant-card-small sc-1fcc07h-0 haBOqc"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              Gas Fee (this is prediction value)
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <p>
            0.003345
             ETH
            <span
              class="sc-1nbnut-0 kCUpAq"
            >
               $0.78
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</body>
`;
